wp-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wp-deploy
  template:
    metadata:
      labels:
        app: wp-deploy
    spec:
      containers:
      - image: wordpress:6.2.1-apache
        name: wordpress
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wp-storage
          mountPath: /var/www/html
      volumes:
      - name: wp-storage
        persistentVolumeClaim:
          claimName: wp-pvc
