mysql-svc-np.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc-np
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30001
  selector:
    app: mysql-deploy
