wp-svc-lb.yml
apiVersion: v1
kind: Service
metadata: 
  name: wp-svc-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wp-deploy
