wp-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
spec:
  defaultBackend:
    service:
      name: wp-svc-lb
      port:
        number: 80
  rules:
  - host: wp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-svc-lb
            port:
              number: 80
